--- a/app/views/admin/search/research.js.erb
+++ b/app/views/admin/search/research.js.erb
@@ -1,1 +1,3 @@
 $('#content_user').html("<%= escape_javascript(render('research_user')) %>");
+$('#content_game').html("<%= escape_javascript(render('research_game')) %>");
+$('#content_tournament').html("<%= escape_javascript(render('research_tournament')) %>");
